load("//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "consumer",
    srcs = ["src/main/scala/com/example/consumer/Consumer.scala"],
    deps = ["//test/coverage_scalatest_resources/resource"],
)

scala_test(
    name = "tests",
    srcs = [
        "src/test/scala/com/example/consumer/ConsumerSpec.scala",
    ],
    deps = [":consumer"],
)
