load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "ManifestPlugin",
    srcs = ["ManifestPlugin.java"],
    deps = ["//scala/private/toolchain_deps:scala_compile_classpath"],
    resources = ["scalac-plugin.xml"],
    resource_strip_prefix = package_name(),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "Compiler",
    srcs = ["Compiler.java", "FixedTimeJarFactory.java"],
    main_class = "pipeline.Compiler",
    visibility = ["//visibility:public"],
    deps = [
        "//scala/private/toolchain_deps:scala_compile_classpath",
        "@io_bazel_rules_scala//src/java/io/bazel/rulesscala/worker",
    ],
)

java_test(
    name = "FixedTimeJarFactoryTest",
    srcs = ["FixedTimeJarFactoryTest.java"],
    test_class = "pipeline.FixedTimeJarFactoryTest",
    deps = [
        ":Compiler",
        "//scala/private/toolchain_deps:scala_compile_classpath",
    ],
)

java_test(
    name = "CompilerTest",
    srcs = ["CompilerTest.java"],
    test_class = "pipeline.CompilerTest",
    deps = [
        ":Compiler",
        "//scala/private/toolchain_deps:scala_compile_classpath",
        "@io_bazel_rules_scala//src/java/io/bazel/rulesscala/worker",
    ],
)
