load(
    "@io_bazel_rules_scala//unstable/multiscala:configuration.bzl",
    "toolchain_label",
)
load(
    "@io_bazel_rules_scala//unstable/multiscala:multiscala.bzl",
    _scala_binary = "scala_binary",
    _scala_library = "scala_library",
    _scala_test = "scala_test",
)

_scala_library(
    name = "library",
    srcs = glob(
        ["*.scala"],
        exclude = ["*Test.scala"],
    ),
)

_scala_binary(
    name = "app",
    main_class = "App",
    runtime_deps = [":library"],
)

_scala_test(
    name = "test",
    srcs = ["AppTest.scala"],
    scala_deps = [":library"],
    deps = [":library"],
)

_scala_library(
    name = "library_with_explict_toolchain",
    srcs = ["App.scala"],
    toolchains = [toolchain_label("scala", "2.11")],
)

_scala_binary(
    name = "app_with_explict_toolchain",
    main_class = "App",
    toolchains = [toolchain_label("scala", "2.11")],
    runtime_deps = [":library_with_explict_toolchain"],
)

_scala_test(
    name = "test_with_explict_toolchain",
    srcs = ["AppTest.scala"],
    scala_deps = [":library_with_explict_toolchain"],
    toolchains = [toolchain_label("scala", "2.11")],
    deps = [":library_with_explict_toolchain"],
)
