load(
    "@io_bazel_rules_scala//unstable/multiscala:configuration.bzl",
    "toolchain_label",
)
load(
    "@io_bazel_rules_scala//unstable/multiscala:multiscala.bzl",
    _scala_binary = "scala_binary",
    _scala_library = "scala_library",
    _scala_test = "scala_test",
)

# default case: builds all configured versions with version suffixes

_scala_library(
    name = "library",
    srcs = glob(
        ["*.scala"],
        exclude = ["*Test.scala"],
    ),
)

_scala_binary(
    name = "app",
    main_class = "App",
    scala_runtime_deps = [":library"],
)

_scala_test(
    name = "test",
    srcs = ["AppTest.scala"],
    scala_deps = [":library"],
)

# explict version configuration

_scala_library(
    name = "library_with_explict_version",
    srcs = ["App.scala"],
    scala = "2.12",
)

_scala_binary(
    name = "app_with_explict_version",
    main_class = "App",
    runtime_deps = [":library_with_explict_version"],
    scala = "2.12",
)

_scala_test(
    name = "test_with_explict_version",
    srcs = ["AppTest.scala"],
    deps = [":library_with_explict_version"],
    scala = "2.12",
)

# explict toolchain configuration

_scala_library(
    name = "library_with_explict_version",
    srcs = ["App.scala"],
    toolchains = [toolchain_label("scala", "2.11")],
)

_scala_binary(
    name = "app_with_explict_version",
    main_class = "App",
    runtime_deps = [":library_with_explict_version"],
    toolchains = [toolchain_label("scala", "2.11")],
)

_scala_test(
    name = "test_with_explict_version",
    srcs = ["AppTest.scala"],
    deps = [":library_with_explict_version"],
    toolchains = [toolchain_label("scala", "2.11")],
)
