load("//scala:scala.bzl", "scala_specs2_junit_test")
load("//scala:scala_import.bzl", "scala_import")

scala_import(
    name = "scala_import_never_link",
    jars = [
        "scala_import_never_link.jar"
    ],
    neverlink = 1,
)

scala_specs2_junit_test(
    name = "scala_import_never_link_test",
    size = "small",
    srcs = ["ScalaImportNeverLinkTest.scala"],
    suffixes = ["Test"],
    deps = [":scala_import_never_link"],
)
